# Discord-bot-X

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  USER_GUIDE.md  bot.py  config.py  generator.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
tests/: test_generator.py
